--- a/.github/workflows/build-debug.yml
+++ b/.github/workflows/build-debug.yml
@@ -28,6 +28,8 @@ jobs:
     runs-on: ubuntu-18.04
     env:
       API_BASE_URL: ${{ secrets.API_BASE_URL }}
+      IMAGE_BASE_URL: ${{ secrets.IMAGE_BASE_URL }}
+      API_BEARER_TOKEN: ${{ secrets.API_BASE_URL }}
 
     steps:
 
@@ -36,6 +38,8 @@ jobs:
 
       - run: touch local.properties
       - run: echo -e "\nAPI_BASE_URL=$API_BASE_URL" >> local.properties
+      - run: echo -e "\nIMAGE_BASE_URL=$IMAGE_BASE_URL" >> local.properties
+      - run: echo -e "\nAPI_BEARER_TOKEN=$API_BEARER_TOKEN" >> local.properties
 
       - name: Setup Java JDK
         uses: actions/setup-java@v1
